<resources>

    <!--Please remove strings with translatable="false"-->

    <string name="app_name" translatable="false">APKMirror</string>
    <string name="settings">Settings</string>
    <string name="upload">Upload</string>
    <string name="browse">Browse</string>
    <string name="exit">Exit</string>

    <string name="storage_access">This app needs to have a permission to write to external storage in order to save files. (You need to click the download button again)</string>
    <string name="request_permission">Request permission</string>
    <string name="write_permission">Write permission</string>

    <string name="error">Error</string>
    <string name="error_while_loading_page">An error occurred while loading this page: </string>
    <string name="thread">XDA Thread</string>
    <string name="libraries">Libraries</string>
    <string name="download_started">Download started…</string>
    <string name="search">Search</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="about">About</string>
    <string name="splash_image_desc">The Splash Image</string>

    <string name="fab_pref_summ">Disabling this will hide the search floating action button (restart is required in order to change this settings)</string>
    <string name="fab_pref">Show search FAB</string>
    <string name="cant_download">Can\'t start download, please make sure you have download manager installed.</string>
    <string name="save_url_pref">Remember last url</string>
    <string name="exit_pref">Show exit button in navigation</string>
    <string name="refresh">Refresh</string>
    <string name="with_thanks">With thanks to the following people:</string>
    <string name="evo_thx">For the amazing icon, help with design, French translation and much more!</string>
    <string name="ja_som_thx">For help and constant updating of slovak translation</string>
    <string name="fast0n_thx">For Italian translation</string>
    <string name="nin_thx">For help with development</string>
    <string name="azalel_thx">For German translation</string>
    <string name="tim_thx">For German translation</string>
    <string name="berkantkz_thx">For Turkish translation</string>
    <string name="hbbxmjbb_thx">For Chinese translation</string>
    <string name="nightstorm8x">For Vietnamese translation</string>
    <string name="fonodosebas">For Spanish translation</string>
    <string name="josefill">For Hungarian translation</string>
    <string name="vladandroidgamer">For Russian translation</string>
    <string name="xx6600xx">For Arabic translation</string>
    <string name="radeox_thx">For Polish translation</string>
    <string name="ita_thx">For forking and updating the app to the latest standards</string>

    <string name="github_summ">Interested how this app works?</string>
    <string name="lib_summ">View the used open source libraries in this app</string>
    <string name="xda_summ">Discuss about this with other people!</string>
    <string name="restart_required">Restart is required in order to change this settings</string>

    <string name="nothing" translatable="false" />
    <string name="external_download_summ">Use apps like ADM or Download Accelerator to download apks</string>
    <string name="external_download_pref">Use external download app</string>
    <string name="runtime_error_dialog_content">A Runtime error occurred,make sure you have webview package installed.</string>
    <string name="copy_log">Copy log</string>
    <string name="clip_error">Error while copying</string>
    <string name="search_error">Error while getting text from search dialog</string>

</resources>

