<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="apkmirror_save_url"
        android:title="@string/save_url_pref" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="apkmirror_external_download"
        android:summary="@string/external_download_summ"
        android:title="@string/external_download_pref" />

    <PreferenceCategory android:title="@string/about" />

    <Preference
        android:key="apkmirror_github"
        android:summary="@string/github_summ"
        android:title="@string/github" />

    <Preference
        android:key="apkmirror_libs"
        android:summary="@string/lib_summ"
        android:title="@string/libraries" />


    <PreferenceCategory android:title="@string/with_thanks">
        <Preference
        android:summary="@string/evo_thx"
        android:title="EvoWizz" />
        <Preference
            android:summary="@string/nin_thx"
            android:title="Ninnix96" />
        <Preference
            android:summary="@string/ita_thx"
            android:title="Itachi1706" />
    </PreferenceCategory>



</PreferenceScreen>
