<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/ic_public_black_24dp"
        android:title="@string/browse"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_upload"
        android:enabled="true"
        android:icon="@drawable/ic_file_upload_black_24dp"
        android:title="@string/upload"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
</menu>