<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_file_upload"
        android:shortcutId="shortcut_upload"
        android:shortcutShortLabel="@string/upload"
        tools:targetApi="n_mr1">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="cf.vojtechh.apkmirror.activities.MainActivity"
            android:targetPackage="cf.vojtechh.apkmirror">
            <extra
                android:name="url"
                android:value="http://www.apkmirror.com/apk-upload/" />
        </intent>
    </shortcut>

    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_search"
        android:shortcutId="shortcut_search"
        android:shortcutShortLabel="@string/search"
        tools:targetApi="n_mr1">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="cf.vojtechh.apkmirror.activities.SearchActivity"
            android:targetPackage="cf.vojtechh.apkmirror" />
    </shortcut>

    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_settings"
        android:shortcutId="shortcut_settings"
        android:shortcutShortLabel="@string/settings"
        tools:targetApi="n_mr1">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="cf.vojtechh.apkmirror.activities.MainActivity"
            android:targetPackage="cf.vojtechh.apkmirror">
            <extra
                android:name="url"
                android:value="apkmirror://settings" />
        </intent>
    </shortcut>
</shortcuts>